Experiment and Results

--- a/Paper Review/PNASTMPL.tex
+++ b/Paper Review/PNASTMPL.tex
@@ -230,22 +230,24 @@ The second component that is required for privacy defense is using the feedback 
 
 %------------------------------------------------
 
-\section{Experiment}
+\section{Experiment and Results}
 
+Considering the environment of the presented experiment in the paper, we find that it was redundant to execute the experiment with submitting queries from random categories as it does not provide relevant results and does not contribute in the significance of the privacy offense method. On the contrary, submitting queries from the category that is the furthest away from the user's interest category is more relevant to the privacy offense method \ref{fig:results}.
 
-Vivamus magna enim, alique
+\begin{figure}[h]
+\includegraphics[scale=0.3]{Figure}
+\caption{Results}
+\label{fig:results}
+\centering
+\end{figure}
 
-%------------------------------------------------
-
-\section{Result}
-
-Nam fermentum.
+According to Wicker's experiment, all users submit random queries from their batch of interest categories in 10\% of the cases. These outputs are based on using twenty categories in the experiment environment which we believe is sufficient in the context of an experiment. Upscaling the method would actually lead to more issues with greater number of users and interest categories. Despite that, it was fairly mentioned in the future work section that it is a major concern to continue working on the method and crucial to its development. 
 
 %------------------------------------------------
 
 \section{Conclusion}
 
-Nam fermentum.
+Freakin fuckin conclusion.
 
 %----------------------------------------------------------------------------------------
 %	MATERIALS AND METHODS
